--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,7 @@ services:
     environment:
       MYSQL_DATABASE: ts-test-db
       MYSQL_ROOT_PASSWORD: password
+      MYSQL_USER: tstest
+      MYSQL_PASSWORD: tstest
     ports:
       - 3306:3306
