--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "knex": "^0.15.2",
+    "morgan": "^1.9.1",
+    "mysql": "^2.16.0",
+    "objection": "^1.4.0"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/knex": "^0.15.1",
+    "@types/morgan": "^1.7.35",
+    "@types/mysql": "^2.15.5",
     "@types/node": "^10.12.10",
     "npm-run-all": "^4.1.5",
     "tsc-watch": "^1.0.31",
