--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
+    "inversify": "^5.0.1",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
-    "objection": "^1.4.0"
+    "objection": "^1.4.0",
+    "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/inversify": "^2.0.33",
     "@types/knex": "^0.15.1",
     "@types/morgan": "^1.7.35",
     "@types/mysql": "^2.15.5",
