--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Topi Latva-Salo",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "inversify": "^5.0.1",
     "knex": "^0.15.2",
@@ -28,6 +29,7 @@
     "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.16.0",
     "@types/inversify": "^2.0.33",
     "@types/knex": "^0.15.1",
