--- a/package.json
+++ b/package.json
@@ -20,20 +20,25 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "inversify": "^5.0.1",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "objection": "^1.4.0",
-    "reflect-metadata": "^0.1.12"
+    "reflect-metadata": "^0.1.12",
+    "routing-controllers": "^0.7.7"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
     "@types/inversify": "^2.0.33",
     "@types/knex": "^0.15.1",
     "@types/morgan": "^1.7.35",
+    "@types/multer": "^1.3.7",
     "@types/mysql": "^2.15.5",
     "@types/node": "^10.12.10",
     "npm-run-all": "^4.1.5",
