--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/multer": "^1.3.7",
     "@types/mysql": "^2.15.5",
     "@types/node": "^10.12.10",
+    "inversify-logger-middleware": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "tsc-watch": "^1.0.31",
     "typescript": "^3.1.6"
