--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     #   # Make database persistent
     #   - /var/lib/mysql
     environment:
-      MYSQL_DATABASE: ts-test-db
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: tstest
-      MYSQL_PASSWORD: tstest
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
-      - 3306:3306
+      - ${MYSQL_PORT}:3306
