--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "mysql": "^2.16.0",
     "objection": "^1.4.0",
     "reflect-metadata": "^0.1.12",
-    "routing-controllers": "^0.7.7"
+    "routing-controllers": "^0.7.7",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
