--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "apisauce": "^1.0.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "chalk": "^2.4.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "inversify": "^5.0.1",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.17.0",
+    "@types/chalk": "^2.2.0",
     "@types/express": "^4.16.0",
     "@types/inversify": "^2.0.33",
     "@types/knex": "^0.15.1",
