--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "inversify-logger-middleware": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
+    "ts-node": "^8.4.1",
     "tsc-watch": "^1.0.31",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.1",
