--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
   "license": "MIT",
   "dependencies": {
     "apisauce": "^1.0.0",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "inversify": "^5.0.1",
     "knex": "^0.15.2",
+    "logform": "^2.1.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
@@ -66,6 +67,7 @@
     "tsc-watch": "^1.0.31",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.1.6"
   }
 }
