--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "run": "node ./build/server.js",
     "start": "tsc-watch --onSuccess \"node ./build/server.js\" --onFailure \"echo Compilation failed! \"",
     "prettier": "node node_modules/prettier/bin-prettier.js --write '**/*.ts'"
-
   },
   "pre-commit": [
     "prettier",
@@ -25,12 +24,14 @@
   ],
   "contributors": [
     {
-      "name": "Topi Latva-Salo",
-      "email": "topi.latva-salo@geniem.com"
+      "name": "Topi Latva-Salo"
     },
     {
-      "name": "Timo Laakso",
-      "email": "timo.laakso@geniem.com"
+      "name": "Timo Laakso"
+    },
+    {
+      "name" : "Mika Puhakka",
+      "email": "mika.puhakka@geniem.com"
     }
   ],
   "license": "MIT",
