--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "compile": "tsc",
     "prerun": "npm run compile",
-    "run": "node ./build/server.js",
-    "start": "tsc-watch --onSuccess \"node ./build/server.js\" --onFailure \"echo Compilation failed! \"",
+    "run": "node ./build/src/server.js",
+    "start": "tsc-watch --onSuccess \"node ./build/src/server.js\" --onFailure \"echo Compilation failed! \"",
     "prettier": "node node_modules/prettier/bin-prettier.js --write '**/*.ts'"
   },
   "pre-commit": [
@@ -30,7 +30,7 @@
       "name": "Timo Laakso"
     },
     {
-      "name" : "Mika Puhakka",
+      "name": "Mika Puhakka",
       "email": "mika.puhakka@geniem.com"
     }
   ],
@@ -43,6 +43,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "inversify": "^5.0.1",
+    "inversify-express-utils": "^6.3.2",
     "knex": "^0.15.2",
     "logform": "^2.1.2",
     "morgan": "^1.9.1",
@@ -50,7 +51,6 @@
     "mysql": "^2.16.0",
     "objection": "^1.4.0",
     "reflect-metadata": "^0.1.12",
-    "routing-controllers": "^0.7.7",
     "winston": "^3.1.0"
   },
   "devDependencies": {
@@ -67,6 +67,7 @@
     "inversify-logger-middleware": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
+    "prettier": "^1.18.2",
     "ts-node": "^8.4.1",
     "tsc-watch": "^1.0.31",
     "tslint": "^5.11.0",
